# CVEdit

./: .gitignore  CMakeLists.txt  README.md
presets/: old_tv.json
resources/: icons.qrc
resources/presets/: collapse.json  cyberpunk_neon.json  dreamy.json  horror_cam.json  noir.json  painting.json  vaporwave.json
src/: main.cpp  main_window.cpp  main_window.h  main_window_helpers.cpp  utils.cpp  utils.h  video_source.cpp  video_source.h
src/filters/: filter.cpp  filter.h  filter_bloom.h  filter_blur.h  filter_canny.h  filter_colorize.h  filter_film_noise.h  filter_glitch.h  filter_gradient_overlay.h  filter_grayscale.h  filter_hue_shift.h  filter_kuwahara.h  filter_param_helper.h  filter_pixel_displace.h  filter_scanlines.h  filter_shake.h  filter_sort.cpp  filter_sort.h  filter_vignette.h
